--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ click==8.2.1
 colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
 dataclasses-json==0.6.7
 debugpy==1.8.16
 decorator==5.2.1
@@ -24,6 +26,7 @@ durationpy==0.10
 executing==2.2.0
 filelock==3.18.0
 flatbuffers==25.2.10
+fonttools==4.59.0
 frozenlist==1.7.0
 fsspec==2025.7.0
 google-auth==2.40.3
@@ -38,6 +41,7 @@ httpx-sse==0.4.1
 huggingface-hub==0.34.4
 humanfriendly==10.0
 idna==3.10
+ijson==3.4.0
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
 ipykernel==6.30.1
@@ -52,6 +56,7 @@ jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
+kiwisolver==1.4.9
 kubernetes==33.1.0
 langchain==0.3.27
 langchain-community==0.3.27
@@ -61,6 +66,7 @@ langsmith==0.4.14
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
+matplotlib==3.10.5
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mmh3==5.2.0
@@ -81,6 +87,7 @@ opentelemetry-semantic-conventions==0.57b0
 orjson==3.11.2
 overrides==7.7.0
 packaging==25.0
+pandas==2.3.1
 parso==0.8.4
 pillow==11.3.0
 platformdirs==4.3.8
@@ -97,6 +104,7 @@ pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
+pyparsing==3.2.3
 pypdf==6.0.0
 PyPDF2==3.0.1
 PyPika==0.48.9
@@ -104,6 +112,7 @@ pyproject_hooks==1.2.0
 pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+pytz==2025.2
 pywin32==311
 PyYAML==6.0.2
 pyzmq==27.0.1
@@ -118,6 +127,7 @@ rsa==4.9.1
 safetensors==0.6.2
 scikit-learn==1.7.1
 scipy==1.16.1
+seaborn==0.13.2
 sentence-transformers==5.1.0
 setuptools==80.9.0
 shellingham==1.5.4
@@ -138,6 +148,7 @@ typer==0.16.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
 watchfiles==1.1.0
